// Vitest Snapshot v1

exports[`CdrRating > renders correctly 1`] = `
<a
  class="cdr-rating cdr-rating--medium cdr-rating--linked"
  href="rei.com"
>
  <div
    class="cdr-rating__ratings"
  >
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__25"
    />
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__placeholder"
    />
    
  </div>
  <span
    aria-hidden="true"
    class="cdr-rating__count"
  >
    <span
      class="cdr-rating__number"
    >
      3.2
    </span>
    <span>
      100
    </span>
    <span>
        Reviews 
    </span>
  </span>
  <span
    class="cdr-rating__caption-sr"
  >
    View the 100 reviews with an average rating of 3.2 out of 5 stars
  </span>
</a>
`;

exports[`CdrRating > with a whole number rating > renders correctly 1`] = `
<a
  class="cdr-rating cdr-rating--medium cdr-rating--linked"
  href="rei.com"
>
  <div
    class="cdr-rating__ratings"
  >
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    
    <!--v-if-->
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__placeholder"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__placeholder"
    />
    
  </div>
  <span
    aria-hidden="true"
    class="cdr-rating__count"
  >
    <span
      class="cdr-rating__number"
    >
      3.0
    </span>
    <span>
      1
    </span>
    <span>
        Reviews 
    </span>
  </span>
  <span
    class="cdr-rating__caption-sr"
  >
    View the 1 reviews with an average rating of 3.0 out of 5 stars
  </span>
</a>
`;

exports[`CdrRating > with a whole number rating and no href > renders correctly 1`] = `
<a
  class="cdr-rating cdr-rating--medium cdr-rating--linked"
  href="rei.com"
>
  <div
    class="cdr-rating__ratings"
  >
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    
    <!--v-if-->
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__placeholder"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__placeholder"
    />
    
  </div>
  <span
    aria-hidden="true"
    class="cdr-rating__count"
  >
    <span
      class="cdr-rating__number"
    >
      3.0
    </span>
    <span>
      1
    </span>
    <span>
        Reviews 
    </span>
  </span>
  <span
    class="cdr-rating__caption-sr"
  >
    View the 1 reviews with an average rating of 3.0 out of 5 stars
  </span>
</a>
`;

exports[`CdrRating > with an href > renders correctly 1`] = `
<a
  class="cdr-rating cdr-rating--medium cdr-rating--linked"
  href="rei.com"
>
  <div
    class="cdr-rating__ratings"
  >
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__25"
    />
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__placeholder"
    />
    
  </div>
  <span
    aria-hidden="true"
    class="cdr-rating__count"
  >
    <span
      class="cdr-rating__number"
    >
      3.2
    </span>
    <span>
      100
    </span>
    <span>
        Reviews 
    </span>
  </span>
  <span
    class="cdr-rating__caption-sr"
  >
    View the 100 reviews with an average rating of 3.2 out of 5 stars
  </span>
</a>
`;

exports[`CdrRating > with an href > with a count of 0 > renders correctly 1`] = `
<a
  class="cdr-rating cdr-rating--medium cdr-rating--linked"
  href="rei.com"
>
  <div
    class="cdr-rating__ratings"
  >
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__25"
    />
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__placeholder--no-reviews"
    />
    
  </div>
  <span
    aria-hidden="true"
    class="cdr-rating__count"
  >
    <span
      class="cdr-rating__number"
    >
      3.2
    </span>
    <span>
      0
    </span>
    <span>
        Reviews 
    </span>
  </span>
  <span
    class="cdr-rating__caption-sr"
  >
    No reviews yet; be the first!
  </span>
</a>
`;

exports[`CdrRating > with an href > with a whole number rating > renders correctly 1`] = `
<a
  class="cdr-rating cdr-rating--medium cdr-rating--linked"
  href="rei.com"
>
  <div
    class="cdr-rating__ratings"
  >
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    
    <!--v-if-->
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__placeholder"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__placeholder"
    />
    
  </div>
  <span
    aria-hidden="true"
    class="cdr-rating__count"
  >
    <span
      class="cdr-rating__number"
    >
      3.0
    </span>
    <span>
      1
    </span>
    <span>
        Reviews 
    </span>
  </span>
  <span
    class="cdr-rating__caption-sr"
  >
    View the 1 reviews with an average rating of 3.0 out of 5 stars
  </span>
</a>
`;

exports[`CdrRating > with an href > with decimal rating and count 1 > renders correctly 1`] = `
<a
  class="cdr-rating cdr-rating--medium cdr-rating--linked"
  href="rei.com"
>
  <div
    class="cdr-rating__ratings"
  >
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__50"
    />
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__placeholder"
    />
    
  </div>
  <span
    aria-hidden="true"
    class="cdr-rating__count"
  >
    <span
      class="cdr-rating__number"
    >
      3.4
    </span>
    <span>
      1
    </span>
    <span>
        Reviews 
    </span>
  </span>
  <span
    class="cdr-rating__caption-sr"
  >
    View the 1 reviews with an average rating of 3.4 out of 5 stars
  </span>
</a>
`;

exports[`CdrRating > with an href > with string input > renders correctly 1`] = `
<a
  class="cdr-rating cdr-rating--medium cdr-rating--linked"
  href="rei.com"
>
  <div
    class="cdr-rating__ratings"
  >
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__50"
    />
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__placeholder"
    />
    
  </div>
  <span
    aria-hidden="true"
    class="cdr-rating__count"
  >
    <span
      class="cdr-rating__number"
    >
      3.4
    </span>
    <span>
      2
    </span>
    <span>
        Reviews 
    </span>
  </span>
  <span
    class="cdr-rating__caption-sr"
  >
    View the 2 reviews with an average rating of 3.4 out of 5 stars
  </span>
</a>
`;

exports[`CdrRating > with decimal rating and count 1 > renders correctly 1`] = `
<a
  class="cdr-rating cdr-rating--medium cdr-rating--linked"
  href="rei.com"
>
  <div
    class="cdr-rating__ratings"
  >
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__50"
    />
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__placeholder"
    />
    
  </div>
  <span
    aria-hidden="true"
    class="cdr-rating__count"
  >
    <span
      class="cdr-rating__number"
    >
      3.4
    </span>
    <span>
      1
    </span>
    <span>
        Reviews 
    </span>
  </span>
  <span
    class="cdr-rating__caption-sr"
  >
    View the 1 reviews with an average rating of 3.4 out of 5 stars
  </span>
</a>
`;

exports[`CdrRating > with string input > renders correctly 1`] = `
<a
  class="cdr-rating cdr-rating--medium cdr-rating--linked"
  href="rei.com"
>
  <div
    class="cdr-rating__ratings"
  >
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__50"
    />
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__placeholder"
    />
    
  </div>
  <span
    aria-hidden="true"
    class="cdr-rating__count"
  >
    <span
      class="cdr-rating__number"
    >
      3.4
    </span>
    <span>
      2
    </span>
    <span>
        Reviews 
    </span>
  </span>
  <span
    class="cdr-rating__caption-sr"
  >
    View the 2 reviews with an average rating of 3.4 out of 5 stars
  </span>
</a>
`;

exports[`CdrRating > without an href > renders correctly 1`] = `
<div
  class="cdr-rating cdr-rating--medium"
>
  <div
    class="cdr-rating__ratings"
  >
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    
    <!--v-if-->
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__placeholder--no-reviews"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__placeholder--no-reviews"
    />
    
  </div>
  <!--v-if-->
  <span
    class="cdr-rating__caption-sr"
  >
    Rated 3.0 out of 5 stars
  </span>
</div>
`;

exports[`CdrRating > without an href > with a count of 0 > renders correctly 1`] = `
<div
  class="cdr-rating cdr-rating--medium"
>
  <div
    class="cdr-rating__ratings"
  >
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    
    <!--v-if-->
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__placeholder--no-reviews"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__placeholder--no-reviews"
    />
    
  </div>
  <span
    aria-hidden="true"
    class="cdr-rating__count"
  >
    <!--v-if-->
    <span>
      0
    </span>
    <span>
        Reviews 
    </span>
  </span>
  <span
    class="cdr-rating__caption-sr"
  >
    0 reviews
  </span>
</div>
`;

exports[`CdrRating > without an href > with a count of 100 > renders correctly 1`] = `
<div
  class="cdr-rating cdr-rating--medium"
>
  <div
    class="cdr-rating__ratings"
  >
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    
    <!--v-if-->
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__placeholder"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__placeholder"
    />
    
  </div>
  <span
    aria-hidden="true"
    class="cdr-rating__count"
  >
    <!--v-if-->
    <span>
      100
    </span>
    <span>
        Reviews 
    </span>
  </span>
  <span
    class="cdr-rating__caption-sr"
  >
    100 reviews with an average rating of 3.0 out of 5 stars
  </span>
</div>
`;

exports[`CdrRating > without an href or count > renders correctly 1`] = `
<div
  class="cdr-rating cdr-rating--medium"
>
  <div
    class="cdr-rating__ratings"
  >
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__100"
    />
    
    <!--v-if-->
    
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__placeholder--no-reviews"
    />
    <span
      aria-hidden="true"
      class="cdr-rating__icon cdr-rating__placeholder--no-reviews"
    />
    
  </div>
  <!--v-if-->
  <span
    class="cdr-rating__caption-sr"
  >
    Rated 3.0 out of 5 stars
  </span>
</div>
`;
